--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rutina Saludable</title>
+    <link rel="icon" href="/vector-health-sign-icon-design.jpg" type="image/x-icon">
     <style>
         body {
             font-family: 'Arial', sans-serif;
